@@ -258,9 +258,16 @@ enum util_teclas
 	UTIL_KEY_F3,
 	UTIL_KEY_F4,
 	UTIL_KEY_F5,
+	UTIL_KEY_F6,
+	UTIL_KEY_F7,
 	UTIL_KEY_F8,
 	UTIL_KEY_F9,
 	UTIL_KEY_F10,
+	UTIL_KEY_F11,
+	UTIL_KEY_F12,
+	UTIL_KEY_F13,
+	UTIL_KEY_F14,
+	UTIL_KEY_F15,
 	UTIL_KEY_ESC,
 	UTIL_KEY_PAGE_UP,
 	UTIL_KEY_PAGE_DOWN,
